I fixed some funtions like the add new user, I also worked on the responsive side to make it look nice on mobile devices

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -27,8 +27,12 @@ input::-webkit-inner-spin-button {
 
 .playerScore {
 
-    input {
+    input, input:is(:focus) {
         text-align: center;
+        background: transparent;
+        border: none;
+        color: #ffffff !important;
+        padding: 0 !important;
     }
 
     input:is(:disabled) {
